// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalAdminStatusForm /> render correctly if published 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="global.state"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.link.proposal.state"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="box-content box-content__status-form"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <Field
        component={[Function]}
        disabled={false}
        id="publicationStatus"
        name="publicationStatus"
        type="radio-buttons"
      >
        <ToggleButton
          onClick={[Function]}
          value="PUBLISHED"
        >
          <FormattedMessage
            id="global.published"
            values={Object {}}
          />
        </ToggleButton>
        <ToggleButton
          id="proposal-trashed-tab"
          onClick={[Function]}
          value="TRASHED"
        >
          <FormattedMessage
            id="project.trash"
            values={Object {}}
          />
        </ToggleButton>
        <ToggleButton
          onClick={[Function]}
          value="TRASHED_NOT_VISIBLE"
        >
          <FormattedMessage
            id="proposal.state.hidden_content"
            values={Object {}}
          />
        </ToggleButton>
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="proposal-change-state"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={false}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;

exports[`<ProposalAdminStatusForm /> render correctly if unpublished 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="global.state"
        values={Object {}}
      />
    </h3>
    <a
      className="pull-right link"
      href="admin.help.link.proposal.state"
      rel="noopener noreferrer"
      target="_blank"
    >
      <i
        className="fa fa-info-circle"
      />
       
      <FormattedMessage
        id="global.help"
        values={Object {}}
      />
    </a>
  </div>
  <div
    className="box-content box-content__status-form"
  >
    <form
      onSubmit={[MockFunction]}
    >
      <p>
        <FormattedMessage
          id="author-email-waiting-confirmation"
          values={
            Object {
              "email": "soon@yopmail.com",
            }
          }
        />
      </p>
      <Field
        component={[Function]}
        disabled={false}
        id="publicationStatus"
        name="publicationStatus"
        type="radio-buttons"
      >
        <ToggleButton
          onClick={[Function]}
          value="PUBLISHED"
        >
          <FormattedMessage
            id="global.published"
            values={Object {}}
          />
        </ToggleButton>
        <ToggleButton
          id="proposal-trashed-tab"
          onClick={[Function]}
          value="TRASHED"
        >
          <FormattedMessage
            id="project.trash"
            values={Object {}}
          />
        </ToggleButton>
        <ToggleButton
          onClick={[Function]}
          value="TRASHED_NOT_VISIBLE"
        >
          <FormattedMessage
            id="proposal.state.hidden_content"
            values={Object {}}
          />
        </ToggleButton>
        <ToggleButton
          value="UNPUBLISHED"
        >
          <FormattedMessage
            id="proposal.state.unpublished"
            values={Object {}}
          />
        </ToggleButton>
      </Field>
      <ButtonToolbar
        bsClass="btn-toolbar"
        className="box-content__toolbar"
      >
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="primary"
          disabled={true}
          id="proposal-change-state"
          type="submit"
        >
          <FormattedMessage
            id="global.save"
            values={Object {}}
          />
        </Button>
        <Button
          active={false}
          block={false}
          bsClass="btn"
          bsStyle="danger"
          disabled={false}
          onClick={[Function]}
        >
          <FormattedMessage
            id="global.delete"
            values={Object {}}
          />
        </Button>
        <AlertForm
          invalid={false}
          submitFailed={false}
          submitSucceeded={false}
          submitting={false}
          valid={false}
        />
      </ButtonToolbar>
    </form>
  </div>
</div>
`;
